--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "massive": "^6.6.0",
+    "next": "^9.5.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
   "scripts": {
