--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@zeit/next-sass": "^1.0.1",
     "axios": "^0.20.0",
     "body-parser": "^1.19.0",
+    "chroma-js": "^2.1.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "massive": "^6.6.0",
